{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 163,
  "lineage": "d859b26b-c27b-86f9-1d92-790d68f611e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c82a7089b5b091fa",
            "arn": "arn:aws:ec2:us-east-1:958421185668:elastic-ip/eipalloc-0c82a7089b5b091fa",
            "association_id": "eipassoc-0c5e6518e0b1ef30e",
            "domain": "vpc",
            "id": "eipalloc-0c82a7089b5b091fa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e0ebe2ce275f2800",
            "private_dns": "ip-10-0-101-42.ec2.internal",
            "private_ip": "10.0.101.42",
            "public_dns": "ec2-18-209-134-213.compute-1.amazonaws.com",
            "public_ip": "18.209.134.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "registration-app-eks-nat-1"
            },
            "tags_all": {
              "Name": "registration-app-eks-nat-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0474b991fe8125620",
            "arn": "arn:aws:ec2:us-east-1:958421185668:elastic-ip/eipalloc-0474b991fe8125620",
            "association_id": "eipassoc-0443c261bd1576a55",
            "domain": "vpc",
            "id": "eipalloc-0474b991fe8125620",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0050ed45eca611f49",
            "private_dns": "ip-10-0-102-73.ec2.internal",
            "private_ip": "10.0.102.73",
            "public_dns": "ec2-100-49-204-125.compute-1.amazonaws.com",
            "public_ip": "100.49.204.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "registration-app-eks-nat-2"
            },
            "tags_all": {
              "Name": "registration-app-eks-nat-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:internet-gateway/igw-0b41ed09ed472dc52",
            "id": "igw-0b41ed09ed472dc52",
            "owner_id": "958421185668",
            "tags": {
              "Name": "registration-app-eks-igw"
            },
            "tags_all": {
              "Name": "registration-app-eks-igw"
            },
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c82a7089b5b091fa",
            "association_id": "eipassoc-0c5e6518e0b1ef30e",
            "connectivity_type": "public",
            "id": "nat-043c79a1f61272e6b",
            "network_interface_id": "eni-0e0ebe2ce275f2800",
            "private_ip": "10.0.101.42",
            "public_ip": "18.209.134.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cf59b339a6005dc8",
            "tags": {
              "Name": "registration-app-eks-nat-1"
            },
            "tags_all": {
              "Name": "registration-app-eks-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0474b991fe8125620",
            "association_id": "eipassoc-0443c261bd1576a55",
            "connectivity_type": "public",
            "id": "nat-0e1580d655125f098",
            "network_interface_id": "eni-0050ed45eca611f49",
            "private_ip": "10.0.102.73",
            "public_ip": "100.49.204.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03a31cc509a0aa8e3",
            "tags": {
              "Name": "registration-app-eks-nat-2"
            },
            "tags_all": {
              "Name": "registration-app-eks-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:route-table/rtb-0f30c15e8412c01e6",
            "id": "rtb-0f30c15e8412c01e6",
            "owner_id": "958421185668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-043c79a1f61272e6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "registration-app-eks-private-rt-1"
            },
            "tags_all": {
              "Name": "registration-app-eks-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:route-table/rtb-049166af76325eb0f",
            "id": "rtb-049166af76325eb0f",
            "owner_id": "958421185668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1580d655125f098",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "registration-app-eks-private-rt-2"
            },
            "tags_all": {
              "Name": "registration-app-eks-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:route-table/rtb-04ff2062c12bc0815",
            "id": "rtb-04ff2062c12bc0815",
            "owner_id": "958421185668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b41ed09ed472dc52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "registration-app-eks-public-rt"
            },
            "tags_all": {
              "Name": "registration-app-eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f38558e153959fb0",
            "route_table_id": "rtb-0f30c15e8412c01e6",
            "subnet_id": "subnet-0bd4b735751835b1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d1148fc72723134",
            "route_table_id": "rtb-049166af76325eb0f",
            "subnet_id": "subnet-017834a466ddd9bbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4ae984b89ec2f36",
            "route_table_id": "rtb-04ff2062c12bc0815",
            "subnet_id": "subnet-0cf59b339a6005dc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0235b18fa2d19e5f7",
            "route_table_id": "rtb-04ff2062c12bc0815",
            "subnet_id": "subnet-03a31cc509a0aa8e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:security-group/sg-0ad43bbbb928f8569",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad43bbbb928f8569",
            "ingress": [],
            "name": "registration-app-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "958421185668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "registration-app-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "registration-app-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:security-group/sg-05ec0b87f0841afe0",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ec0b87f0841afe0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad43bbbb928f8569"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "registration-app-eks-rds-sg",
            "name_prefix": "",
            "owner_id": "958421185668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "registration-app-eks-rds-sg"
            },
            "tags_all": {
              "Name": "registration-app-eks-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow EKS nodes to connect to RDS PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-3904620416",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05ec0b87f0841afe0",
            "security_group_rule_id": "sgr-03c5ed0a30b43de13",
            "self": false,
            "source_security_group_id": "sg-05c6dab6123bf728b",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_security_group.eks_cluster",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:subnet/subnet-0bd4b735751835b1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd4b735751835b1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958421185668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "registration-app-eks-private-1",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "registration-app-eks-private-1",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:subnet/subnet-017834a466ddd9bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017834a466ddd9bbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958421185668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "registration-app-eks-private-2",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "registration-app-eks-private-2",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:subnet/subnet-0cf59b339a6005dc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf59b339a6005dc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958421185668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "registration-app-eks-public-1",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "registration-app-eks-public-1",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:subnet/subnet-03a31cc509a0aa8e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a31cc509a0aa8e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958421185668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "registration-app-eks-public-2",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "registration-app-eks-public-2",
              "kubernetes.io/cluster/registration-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0950cea602fc9c11c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958421185668:vpc/vpc-0950cea602fc9c11c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06abbdbba19a7d910",
            "default_route_table_id": "rtb-004f64723a6bc2787",
            "default_security_group_id": "sg-0f42f2c10cc496fd6",
            "dhcp_options_id": "dopt-0c7fec5fd08809a7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0950cea602fc9c11c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004f64723a6bc2787",
            "owner_id": "958421185668",
            "tags": {
              "Name": "registration-app-eks-vpc"
            },
            "tags_all": {
              "Name": "registration-app-eks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}